# libnice

./: .clang-format  CMakeLists.txt
agent/: CMakeLists.txt  address.c  address.h  agent-enum-types.c  agent-enum-types.h  agent-priv.h  agent.c  agent.h  candidate-priv.h  candidate.c  candidate.h  component.c  component.h  conncheck.c  conncheck.h  debug.c  debug.h  discovery.c  discovery.h  inputstream.c  inputstream.h  interfaces.c  interfaces.h  iostream.c  iostream.h  outputstream.c  outputstream.h  pseudotcp.c  pseudotcp.h  stream.c  stream.h
cmake/: FindGlib.cmake
examples/: CMakeLists.txt  sdp-example.c  simple-example.c  threaded-example.c
random/: CMakeLists.txt  random.c  random.h
socket/: CMakeLists.txt  http.c  http.h  pseudossl.c  socket.c  socket.h  socks5.c  socks5.h  tcp-active.c  tcp-bsd.c  tcp-passive.c  udp-bsd.c  udp-turn-over-tcp.c  udp-turn-over-tcp.h  udp-turn.c
stun/: CMakeLists.txt  constants.h  debug.c  debug.h  rand.c  rand.h  stun5389.c  stun5389.h  stunagent.c  stunagent.h  stuncrc32.c  stuncrc32.h  stunhmac.c  stunhmac.h  stunmessage.c  stunmessage.h  utils.c  utils.h  win32_common.h
stun/usages/: bind.c  bind.h  ice.c  ice.h  turn.c  turn.h
